# Ant-Algorithm

./: .gitignore  README.md
Ant-Algorithm/: AntColony.cpp  AntColony.hpp  BaseAnt.cpp  BaseAnt.hpp  CMakeLists.txt  ClassAnt.cpp  ClassAnt.hpp  ClassUtils.hpp  LogUtils.hpp  draw.cpp  draw.hpp  main  main.cpp  point.cpp  point.hpp
Ant-Algorithm.xcodeproj/: project.pbxproj
Ant-Algorithm.xcodeproj/xcuserdata/semensestakov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Ant-Algorithm.xcodeproj/xcuserdata/semensestakov.xcuserdatad/xcschemes/: xcschememanagement.plist
Ant-Algorithm/AlgorithmSystem/: AlgorithmSystem.cpp  AlgorithmSystem.hpp
Ant-Algorithm/Graphics/: DrawConstans.hpp  Window.cpp  Window.hpp  draw.cpp
Ant-Algorithm/Graphics/Drawer/: draw.cpp  draw.hpp
Ant-Algorithm/Graphics/Drawer/objects/: DrawPoint.cpp  DrawPoint.hpp
Ant-Algorithm/Math/: BaseAlgorithm.hpp  Utils.cpp  Utils.hpp  point.cpp  point.hpp
Ant-Algorithm/Math/AntMathColony/: AntColony.cpp  AntColony.hpp  BaseAnt.cpp  BaseAnt.hpp  ClassAnt.cpp  ClassAnt.hpp  ColonyUtils.hpp  Utils.cpp  Utils.hpp
Ant-Algorithm/Math/BrutForce/: BrutForce.cpp  BrutForce.hpp
Ant-Algorithm/Math/WriteSystem/: WriteFile.cpp  WriteFile.hpp
Ant-Algorithm/Math/point/: HashablePoint.cpp  HashablePoint.hpp  HashablePoint.ipp  Point.cpp  Point.hpp
Ant-Algorithm/Objects/: PointObject.cpp  PointObject.hpp
Ant-Algorithm/Systems/: AlgorithmSystem.cpp  AlgorithmSystem.hpp  PointsSystem.cpp  PointsSystem.hpp
